@@ -162,10 +162,15 @@ Many git-annex commands will stage changes for later `git commit` by you.
 * migrate [path ...]
 
   Changes the specified annexed files to store their content in the
-  default backend (or the one specified with --backend).
+  default backend (or the one specified with --backend). Only files whose
+  content is currently available are migrated.
 
   Note that the content is not removed from the backend it was previously in.
-  Use `git annex unused` to find and remove such content. 
+  Use `git annex unused` to find and remove such content.
+
+  Normally, nothing will be done to files already in the backend.
+  However, if a backend changes the information it uses to construct a key,
+  this can also be used to migrate files to use the new key format.
 
 * map
 
